# UOMRotobicsTeam4RobotDesign

./: README.md
ros2_Leo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_Leo/log/: latest_build
ros2_Leo/src/ros2_navigation/: package.xml  setup.cfg  setup.py
ros2_Leo/src/ros2_object_detection/: package.xml  setup.cfg  setup.py
ros2_Leo/src/ros2_realsense/: package.xml  setup.cfg  setup.py
ros2_Leo/src/ros2_rplidar/: package.xml  setup.cfg  setup.py
ros2_leocode/bin_detector/: package.xml  setup.cfg  setup.py
ros2_leocode/bin_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_leocode/bin_detector/log/: latest_build
ros2_leocode/interbotix_ws/: README.md
ros2_leocode/interbotix_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_leocode/interbotix_ws/log/: latest_build  latest_list
ros2_leocode/interbotix_ws/src/manip_control/: README.md  package.xml  setup.cfg  setup.py
ros2_leocode/interbotix_ws/src/manip_control/manip_control/: manip_control_node.py
ros2_leocode/sim_wss/sim_ws/: frames_2025-02-27_09.50.49.gv  ros-humble-geographic-msgs_1.0.6-1jammy.20241128.010918_amd64.deb
ros2_leocode/sim_wss/sim_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_leocode/yolox_pose_estimator/: setup.cfg  setup.py
ros2_leocode/yolox_pose_estimator/install/: local_setup.sh  setup.sh  setup.zsh
ros2_leocode/yolox_pose_estimator/log/: latest_build
ros2_leocode/yolox_pose_estimator/yolox_pose_estimator/: estimator_node.py  object_pose_utils_onnx.py
(+554 files in other folders)
